# nina_vst

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  version.h.in  version.txt.in
base/source/: fstring.cpp  timer.cpp
cmake/modules/: AddVST3Library.cmake  AddVST3Options.cmake  PlatformToolset.cmake
melb_inst_vst3/: CMakeLists.txt
melb_inst_vst3/synthia/: CMakeLists.txt
melb_inst_vst3/synthia/source/: AnalogFiltGen.cpp  AnalogFiltGen.h  AnalogOscGen.cpp  AnalogOscGen.h  AnalogVoice.cpp  AnalogVoice.h  Chorus.h  ChorusEngine.h  DCBlock.h  DsVca.h  EffectsController.cpp  EffectsController.h  EffectsParameters.h  EffectsProcessor.cpp  EffectsProcessor.h  FactorySampleMsgQueue.cpp  FactorySampleMsgQueue.h  FactorySamplerController.cpp  FactorySamplerController.h  FactorySamplerProcessor.cpp  FactorySamplerProcessor.h  FactoryTestNinaController.cpp  FactoryTestNinaController.h  FactoryTestNinaProcessor.cpp  FactoryTestNinaProcessor.h  GuiMsgQueue.cpp  GuiMsgQueue.h  Layer.cpp  Layer.h  LayerManager.cpp  LayerManager.h  Matrix.h  NinaCalSequencer.cpp  NinaCalSequencer.h  NinaController.cpp  NinaController.h  NinaDelay.h  NinaDriveCompensator.h  NinaEffectsLimiter.h  NinaEnvelope.cpp  (+35 more)
melb_inst_vst3/synthia/source/freeverb/: CMakeLists.txt  allpass.cpp  allpass.hpp  allpass_t.hpp  biquad.cpp  biquad.hpp  biquad_t.hpp  blockDelay.cpp  blockDelay.hpp  blockDelay_t.hpp  comb.cpp  comb.hpp  comb_t.hpp  compmodel.cpp  compmodel.hpp  compmodel_t.hpp  delay.cpp  delay.hpp  delay_t.hpp  delayline.cpp  delayline.hpp  delayline_t.hpp  dl_gardner.cpp  dl_gardner.hpp  dl_gardner_t.hpp  earlyref.cpp  earlyref.hpp  earlyref_t.hpp  efilter.cpp  efilter.hpp  efilter_t.hpp  fir3bandsplit.cpp  fir3bandsplit.hpp  fir3bandsplit_t.hpp  firfilter.cpp  firfilter.hpp  firfilter_t.hpp  firwindow.cpp  firwindow.hpp  firwindow_t.hpp  (+85 more)
patches/: sushi_melb_inst.patch
pluginterfaces/base/: doc.h
public.sdk/samples/vst-hosting/: CMakeLists.txt
public.sdk/source/common/: threadchecker_linux.cpp
public.sdk/source/vst/hosting/: module_linux.cpp
public.sdk/source/vst/testsuite/unit/: scanprograms.cpp
